--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,27 +91,6 @@ jobs:
             - name: Create coverage directory
               run: mkdir -p ./coverage
 
-            - name: Create coverage settings
-              run: |
-                  cat > coverage.runsettings << 'EOF'
-                  <?xml version="1.0" encoding="utf-8"?>
-                  <RunSettings>
-                    <DataCollectionRunSettings>
-                      <DataCollectors>
-                        <DataCollector friendlyName="XPlat code coverage">
-                          <Configuration>
-                            <Format>cobertura</Format>
-                            <Exclude>[*.Tests]*,[*]*Test*</Exclude>
-                            <ExcludeByAttribute>Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute</ExcludeByAttribute>
-                          </Configuration>
-                        </DataCollector>
-                      </DataCollectors>
-                    </DataCollectionRunSettings>
-                  </RunSettings>
-                  EOF
-                  echo "Created coverage.runsettings:"
-                  cat coverage.runsettings
-
             - name: DEBUG - Before running tests
               run: |
                   echo "🧪 ABOUT TO RUN TESTS! 🧪"
@@ -124,40 +103,22 @@ jobs:
                   echo "Checking solution file:"
                   ls -la *.sln
 
+            - name: Install dotnet-coverage tool
+              run: |
+                  echo "=== Installing dotnet-coverage tool ==="
+                  dotnet tool install --global dotnet-coverage
+
             - name: Run tests with coverage
               run: |
-                  echo "=== Running tests with coverage collection ==="
-
-                  # First try: XPlat Code Coverage with settings file
+                  echo "=== Running tests with dotnet-coverage ==="
+                  # Use dotnet-coverage (modern Microsoft tool)
+                  dotnet-coverage collect "dotnet test HikingRentalStore.sln --configuration Release --no-build" \
+                    -f xml -o "./coverage/coverage.xml"
+                    
+                  # Also generate test results for SonarCloud
                   dotnet test HikingRentalStore.sln --configuration Release --no-build \
-                    --collect:"XPlat Code Coverage" \
-                    --results-directory ./coverage \
-                    --settings ./coverage.runsettings \
                     --logger "trx;LogFileName=TestResults.trx" \
-                    --verbosity normal
-                    
-                  echo "=== Try MSBuild approach with fresh build ==="
-                  # Restore packages to ensure coverlet.msbuild is available
-                  dotnet restore HikingRentalStore.sln
-
-                  # Build and run tests with MSBuild coverage properties
-                  dotnet test HikingRentalStore.sln --configuration Release \
-                    /p:CollectCoverage=true \
-                    /p:CoverletOutputFormat=cobertura \
-                    /p:CoverletOutput=./coverage/ \
-                    --logger "trx;LogFileName=TestResults-alt.trx" \
-                    --results-directory ./coverage || echo "MSBuild approach failed"
-                    
-                  echo "=== Try coverlet global tool as fallback ==="
-                  # Install coverlet as global tool
-                  dotnet tool install --global coverlet.console || echo "Coverlet already installed"
-
-                  # Use coverlet global tool
-                  coverlet "HRS.Test/bin/Release/net8.0/HRS.Test.dll" \
-                    --target "dotnet" \
-                    --targetargs "test HRS.Test/HRS.Test.csproj --configuration Release --no-build" \
-                    --format cobertura \
-                    --output "./coverage/coverage-global.xml" || echo "Global tool approach failed"
+                    --results-directory ./coverage
 
             - name: COMPREHENSIVE COVERAGE DEBUG
               run: |
@@ -261,27 +222,18 @@ jobs:
                   if [ -d "./coverage" ]; then
                     ls -la ./coverage/
                     echo ""
-                    echo "File details:"
-                    find ./coverage -type f -exec ls -la {} \;
-                    echo ""
-                    echo "Show first few lines of coverage files:"
-                    find ./coverage -name "*.xml" -exec head -10 {} \; 2>/dev/null || echo "No XML files to preview"
+                    if [ -f "./coverage/coverage.xml" ]; then
+                      echo "✅ Coverage file found: coverage.xml"
+                      echo "File size: $(stat -c%s ./coverage/coverage.xml 2>/dev/null || stat -f%z ./coverage/coverage.xml) bytes"
+                      echo "First 10 lines:"
+                      head -10 ./coverage/coverage.xml
+                    else
+                      echo "❌ coverage.xml not found!"
+                    fi
                   else
                     echo "❌ No coverage directory found!"
                     ls -la .
                   fi
-
-                  echo "=========================================="
-                  echo "SONAR DEBUG - SPECIFIC FILE CHECK"
-                  echo "=========================================="
-                  echo "Looking for TestResults.trx:"
-                  find ./coverage -name "TestResults.trx" 2>/dev/null || echo "❌ No TestResults.trx found"
-
-                  echo "Looking for coverage files:"
-                  find ./coverage -name "*.xml" -path "*coverage*" 2>/dev/null || echo "❌ No coverage XML files found"
-
-                  echo "Looking for cobertura files:"
-                  find ./coverage -name "*cobertura*" 2>/dev/null || echo "❌ No cobertura files found"
 
             - name: Prepare coverage for SonarCloud
               run: |
@@ -313,11 +265,16 @@ jobs:
                   if [ -f "./coverage/coverage-global.xml" ]; then
                     echo "✅ Coverage file exists: coverage-global.xml"
                     echo "File size: $(stat -c%s ./coverage/coverage-global.xml) bytes"
+                    echo "Absolute path: $(pwd)/coverage/coverage-global.xml"
                     echo "First 20 lines of coverage file:"
                     head -20 ./coverage/coverage-global.xml
                     echo ""
                     echo "Coverage summary from file:"
                     grep -E "line-rate|branch-rate" ./coverage/coverage-global.xml | head -1
+                    
+                    # Create a copy with absolute path reference for SonarCloud
+                    cp ./coverage/coverage-global.xml ./coverage.xml
+                    echo "✅ Created copy at root: coverage.xml"
                   else
                     echo "❌ Coverage file missing!"
                     exit 1
@@ -328,14 +285,14 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
               run: |
-                  # Enable coverage with the generated coverage file
+                  # Configure SonarCloud with Visual Studio Code Coverage format (dotnet-coverage output)
                   dotnet-sonarscanner begin \
                     /k:"hrs-org_hiking-rental-store-api" \
                     /o:"hrs-org" \
                     /d:sonar.token="$SONAR_TOKEN" \
                     /d:sonar.host.url="https://sonarcloud.io" \
-                    /d:sonar.cs.vstest.reportsPaths="coverage/TestResults.trx,coverage/TestResults-alt.trx" \
-                    /d:sonar.cs.cobertura.reportsPaths="coverage/coverage-global.xml" \
+                    /d:sonar.cs.vstest.reportsPaths="coverage/TestResults.trx" \
+                    /d:sonar.cs.vscoveragexml.reportsPaths="coverage/coverage.xml" \
                     /d:sonar.coverage.exclusions="**/*.Tests/**,**/Tests/**,**/*Test*/**" \
                     /d:sonar.verbose=true
 
