--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -275,7 +275,7 @@ jobs:
                   sleep 30
 
             - name: OWASP ZAP Baseline Scan
-              uses: zaproxy/action-baseline@v0.10.0
+              uses: zaproxy/action-baseline@1e1871e84428617b969d4a1f981a8255630d54b0 # v0.10.0
               with:
                   target: "http://localhost:5000"
 
