--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,11 @@ jobs:
 
             - name: Run tests with coverage
               run: |
-                  # Generate code coverage using dotnet-coverage
+                  # Generate code coverage using dotnet-coverage in OpenCover format
+                  dotnet-coverage collect "dotnet test HikingRentalStore.sln --configuration Release --no-build --verbosity normal" \
+                    -f opencover -o "./coverage/coverage.opencover.xml"
+                    
+                  # Also generate in standard XML format for comparison
                   dotnet-coverage collect "dotnet test HikingRentalStore.sln --configuration Release --no-build --verbosity normal" \
                     -f xml -o "./coverage/coverage.xml"
                     
@@ -105,10 +109,10 @@ jobs:
                     --logger "trx;LogFileName=TestResults.trx" \
                     --results-directory ./coverage
                     
-                  # Verify coverage file was created
+                  # Verify coverage files were created
                   ls -la ./coverage/
-                  echo "Coverage file size:"
-                  du -h ./coverage/coverage.xml || echo "Coverage file not found"
+                  echo "Coverage file sizes:"
+                  du -h ./coverage/coverage.*.xml || echo "Coverage files not found"
 
             - name: Upload test results
               uses: actions/upload-artifact@v4
@@ -144,6 +148,9 @@ jobs:
                   name: test-results
                   path: ./coverage
 
+            - name: Install XML tools
+              run: sudo apt-get update && sudo apt-get install -y libxml2-utils
+
             - name: Debug coverage files
               run: |
                   echo "Current working directory:"
@@ -152,17 +159,20 @@ jobs:
                   echo "Coverage directory contents:"
                   ls -la ./coverage/
                   echo ""
-                  echo "Absolute path to coverage.xml:"
-                  readlink -f ./coverage/coverage.xml || echo "Cannot resolve absolute path"
+                  echo "Coverage file sizes:"
+                  du -h ./coverage/coverage.*.xml || echo "Coverage files not found"
                   echo ""
-                  echo "Coverage file size:"
-                  du -h ./coverage/coverage.xml || echo "Coverage file not found"
+                  echo "OpenCover file content (first 10 lines):"
+                  head -10 ./coverage/coverage.opencover.xml || echo "OpenCover file not readable"
                   echo ""
-                  echo "Coverage file content (first 20 lines):"
-                  head -20 ./coverage/coverage.xml || echo "Coverage file not readable"
+                  echo "Check if OpenCover XML is valid:"
+                  xmllint --noout ./coverage/coverage.opencover.xml && echo "OpenCover XML is valid" || echo "OpenCover XML is invalid"
                   echo ""
-                  echo "Check if coverage.xml is valid XML:"
-                  xmllint --noout ./coverage/coverage.xml && echo "XML is valid" || echo "XML is invalid"
+                  echo "Standard XML file content (first 10 lines):"
+                  head -10 ./coverage/coverage.xml || echo "Standard XML file not readable"
+                  echo ""
+                  echo "Check if standard XML is valid:"
+                  xmllint --noout ./coverage/coverage.xml && echo "Standard XML is valid" || echo "Standard XML is invalid"
 
             - name: Begin SonarCloud analysis
               env:
@@ -174,10 +184,10 @@ jobs:
                     /d:sonar.token="$SONAR_TOKEN" \
                     /d:sonar.host.url="https://sonarcloud.io" \
                     /d:sonar.cs.vstest.reportsPaths="./coverage/TestResults.trx" \
-                    /d:sonar.cs.vscoveragexml.reportsPaths="./coverage/coverage.xml" \
+                    /d:sonar.cs.opencover.reportsPaths="./coverage/coverage.opencover.xml" \
                     /d:sonar.coverage.exclusions="**/HRS.Test/**,**/*Test*.cs,**/bin/**,**/obj/**,**/Migrations/**" \
-                    /d:sonar.sources="HRS.API,HRS.Domain,HRS.Infrastructure" \
-                    /d:sonar.exclusions="**/HRS.Test/**,**/bin/**,**/obj/**,**/*.Tests/**,**/Migrations/**" \
+                    /d:sonar.exclusions="**/bin/**,**/obj/**,**/Migrations/**" \
+                    /d:sonar.test.exclusions="**/bin/**,**/obj/**" \
                     /d:sonar.verbose=true
 
             - name: Restore dependencies (for SonarQube analysis)
@@ -241,7 +251,7 @@ jobs:
         name: Build & Push Docker Image
         runs-on: ubuntu-latest
         needs: [build, test, code-quality, security-scan, lint]
-        if: github.event_name != 'release' # Temporarily allow on PRs for testing
+        if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
         environment: staging
 
         steps:
@@ -279,7 +289,7 @@ jobs:
         name: DAST Security Scan
         runs-on: ubuntu-latest
         needs: docker-build
-        if: github.event_name != 'release' # Temporarily allow on PRs for testing
+        if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
         environment: staging
 
         steps:
