--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,35 +144,6 @@ jobs:
                   name: test-results
                   path: ./coverage
 
-            - name: Install XML tools
-              run: sudo apt-get update && sudo apt-get install -y libxml2-utils
-
-            - name: Debug coverage files
-              run: |
-                  echo "Current working directory:"
-                  pwd
-                  echo ""
-                  echo "Coverage directory contents:"
-                  ls -la ./coverage/
-                  echo ""
-                  echo "Coverage file size:"
-                  du -h ./coverage/coverage.xml || echo "Coverage file not found"
-                  echo ""
-                  echo "Coverage file content (first 10 lines):"
-                  head -10 ./coverage/coverage.xml || echo "Coverage file not readable"
-                  echo ""
-                  echo "Check if coverage.xml is valid XML:"
-                  xmllint --noout ./coverage/coverage.xml && echo "XML is valid" || echo "XML is invalid"
-                  echo ""
-                  echo "Coverage summary from XML (line_coverage attributes):"
-                  grep -E 'line_coverage=' ./coverage/coverage.xml | head -5 || echo "Could not extract coverage summary"
-                  echo ""
-                  echo "Total covered lines:"
-                  grep -o 'lines_covered="[0-9]*"' ./coverage/coverage.xml | grep -o '[0-9]*' | awk '{sum+=$1} END {print "Total lines covered: " sum}'
-                  echo ""
-                  echo "Modules with coverage:"
-                  grep -E 'module.*line_coverage=' ./coverage/coverage.xml || echo "No modules found"
-
             - name: Begin SonarCloud analysis
               env:
                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -255,7 +226,7 @@ jobs:
         name: Build & Push Docker Image
         runs-on: ubuntu-latest
         needs: [build, test, code-quality, security-scan, lint]
-        if: github.event_name != 'release' # Temporarily allow on PRs for testing
+        if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
         environment: staging
 
         steps:
@@ -293,7 +264,7 @@ jobs:
         name: DAST Security Scan
         runs-on: ubuntu-latest
         needs: docker-build
-        if: github.event_name != 'release' # Temporarily allow on PRs for testing
+        if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
         environment: staging
 
         steps:
